--- a/Back-end/Poker/Public/Index.html
+++ b/Back-end/Poker/Public/Index.html
@@ -19,10 +19,26 @@
         <h1>Pressione o botão</h1>
         <button id="botao">Aperte-me</button>
         <div id="mensagens"></div>
+        <canvas></canvas>
+        <div class = 'container-opcoes'>
+            
+        </div>
+        <div class = 'container-opcoes'>
+            <button id ="fold">Fold</button>
+            <button id="check">Check</button>
+            <button id="call">Call</button>
+        </div>
+        <div class="container-opcoes">
+            <label for="">Quanto:</label>
+            <input type="number" name="" id="qtRaise">
+            <button id="raise">Raise</button>
+        </div>
+
     </body>
     </html>
     
 
     <script src="Server.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
