--- a/Back-end/Poker/Public/Index.html
+++ b/Back-end/Poker/Public/Index.html
@@ -16,10 +16,9 @@
         <script defer src="script.js"></script>
     </head>
     <body>
-        <h1>Pressione o botão</h1>
-        <button id="botao">Aperte-me</button>
-        <div id="mensagens"></div>
-        <canvas></canvas>
+        <div class="container-opcoes">
+            <h1>Seu stack: <span id = 'stack'></span></h1>
+        </div>
         <div class = 'container-opcoes'>
             
         </div>
