--- a/Back-end/Poker/Public/Index.html
+++ b/Back-end/Poker/Public/Index.html
@@ -16,6 +16,7 @@
         <script defer src="script.js"></script>
     </head>
     <body>
+        <button id="comecar">Começar mão</button>
         <div class="container-opcoes">
             <h1>Seu stack: <span id = 'stack'></span></h1>
         </div>
